Changelog v5.2.69 (2026-01-03):
- Fixed Next Up crash for ongoing anime with unknown episode count (e.g., One Piece)
- Changed .get('key', 0) to .get('key') or 0 to handle API null values in all watchlist flavors

Changelog v5.2.68 (2026-01-02):
- Fix AllDebrid season pack handling

Changelog v5.2.67 (2026-01-01):
- Complete Next Up Overhaul — Recoded for all watchlists (MAL, AniList, Kitsu, Simkl)
- Added episode-driven display with format "Show Name 01x13 - Episode Title"
- Added episode thumbnails via centralized MetaBrowser.get_next_up_meta()
- Added full metadata support for Next Up (cast, trailer, country, year, studios, genres, duration, ratings)
- Added dedicated caching for Next Up sorted by last watched activity
- Added filtering for shows with at least 1 watched episode (excludes unwatched and completed)
- Added parallel processing for faster Next Up loading
- Fixed resolver timeout issue with debrid CDN links (switched from GET to HEAD request)
- Improved artwork handling with proper poster/thumbnail separation

Changelog v5.2.66 (2025-12-30):
- Fixed compatibility issues with Kodi 22 nightly
- Updated AllDebrid Api to 4.1

Changelog v5.2.65 (2025-12-20):
- Fixed Animepahe playback with improved header handling for streaming compatibility
- Enhanced kwik source extraction with proper Referer and Origin headers for CORS
- Improved InputStream Adaptive configuration with manifest headers and license_key for HLS/DASH
- Added support for AES-128 encrypted HLS streams with proper key file request configuration
- Fixed content-type detection for HLS streams (.m3u8 -> application/vnd.apple.mpegurl)
- Fixed search history to decode URL-encoded queries for consistent results with new search
- Added urllib.parse.unquote to properly handle URL-encoded search payloads

Changelog v5.2.64 (2025-12-19):
- Added watchlist paging with persistent caching across all flavors (AniList, Kitsu, MAL, Simkl)
- Added new watchlist database table and cache management functions